update encrypt code